Removed Checker framework